--- a/WebApp1.csproj
+++ b/WebApp1.csproj
@@ -12,6 +12,7 @@
   <ItemGroup>
     <PackageReference Include="Csv" Version="1.0.35" />
     <PackageReference Include="DinkToPdf" Version="1.0.8" />
+    <PackageReference Include="FluentValidation" Version="8.1.3" />
     <PackageReference Include="MailKit" Version="2.0.6" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.1.3" />
